# Contextra-AI

./: API_REFERENCE.md  AUTH_SETUP.md  DETAILED_SUMMARIZER_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  VERIFICATION_CHECKLIST.md  vercel.json
backend/: .env.example  .gitignore  CLAUDE.MD  README.md  pyproject.toml  render.yaml  requirements.txt  temp.md  temp.txt
backend/alembic/: env.py
backend/alembic/versions/: 00ea8f6ba1d3_added_authentication.py  7cabf381fd38_add_storage_path.py  a1bef0049494_create_summary_tasks.py  a67dd3831c51_add_chat_local_id_and_unique_constraint.py  bd279fc04fbb_add_chat_messages_table_for_.py  ce1e8122e91a_fix_user_model_to_have_name_and_email.py  d2b5c3a1e9f2_add_chats_table_and_chat_id_to_documents.py
backend/app/: database.py  dependencies.py  ingestion_pipeline.py  logics.py  main.py  serializer.py  settings.py  tasks.py
backend/app/core/: auth.py  chunker.py  embedder.py  embeddings.py  llm.py  ocr.py
backend/app/models/: __init__.py  chat.py  document.py  embedding.py  ingestion_task.py  summary_task.py  user.py
backend/app/repositories/: chat_repository.py  message_repository.py  pgvector_repository.py  user_repository.py  vector_repository.py
backend/app/routers/: admin.py  auth.py  chat.py  documents.py  users.py
backend/app/schemas/: auth.py  chat.py  document.py  ingestion_task.py  user.py
backend/app/services/: auth_service.py  background_ingestion.py  chat_service.py  document_service.py  flashcard_parsing.py  ingestion_service.py  retrieval_service.py  (+2 more)
backend/tests/: test_flashcards_parser.py
(+47 files in other folders)
